# danceinterpreter-v4

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: cargo-check.yml  publish.yml  release.yml
build-aux/: cargo-sources.json  de.klassenserver7b.danceinterpreter-rs.desktop  de.klassenserver7b.danceinterpreter-rs.json  de.klassenserver7b.danceinterpreter-rs.metainfo.xml
resources/main/: defaultmenu.json  help.html  style.css
resources/test/: id3_read_test.m3u  m3u_validation_test.m3u
src/: lib.rs  macros.rs  main.rs  model.rs  ui.rs
src/dataloading/: id3tagreader.rs  m3uloader.rs  mod.rs  playlist_dataprovider.rs  songinfo.rs  tagreader.rs
src/dataloading/dataprovider/: mod.rs  playlist_dataprovider.rs  song_data_provider.rs
src/ui/: actions.rs  config_window.rs  config_window.ui  menu_bar.rs  menu_bar.ui  mod.rs  song_window.rs  song_window.ui  switch_action.rs  ui_manager.rs
src/ui/gif_paintable/: frame.rs  imp.rs  mod.rs
src/ui/widget/: dynamic_text_input.rs  mod.rs
ui/: main.slint
