[package]
name = "danceinterpreter-v4"
description = "Danceinterpreter v4"
license = "GPL-3.0-or-later"
version = "0.0.1"
edition = "2021"
authors = ["Klassenserver7b <klassenserver7bwin10@gmail.com>", "Konsl <82901383+Konsl@users.noreply.github.com>, Robocraft999 <59525378+Robocraft999@users.noreply.github.com>"]

[dependencies]
id3 = "1.13.1"
url = "2.5.2"
percent-encoding = "2.3.1"
gtk = { version = "0.9.1", package = "gtk4", features = ["v4_12"] }
image = { version = "0.25", features = ["gif"] }
bytes = "1.7.1"
