[package]
name = "danceinterpreter-rs"
description = "Danceinterpreter in Rust"
license = "GPL-3.0-or-later"
version = "0.2.0"
edition = "2021"
authors = ["Klassenserver7b <klassenserver7bwin10@gmail.com>", "Konsl <82901383+Konsl@users.noreply.github.com>, Robocraft999 <59525378+Robocraft999@users.noreply.github.com>"]

[dependencies]
id3 = "1.16.1"
url = "2.5.4"
percent-encoding = "2.3.1"
iced = { version = "0.13.1", features = ["image", "debug", "multi-window" , "svg", "lazy", "async-std", "canvas"]}
iced_aw = { version = "0.11.0", features = ["default"] }
rfd = "0.15.2"
dirs = "6.0.0"
dark-light = "=2.0.0"